# End_to_End

./: .flake8  .gitignore  AUTOSCHEMA_FIX_SUMMARY.md  BUGFIX_AND_TESTING_SUMMARY.md  CACHE_AND_TEST_UPDATE_REPORT.md  COMPLETION_REPORT.md  DEBUG_SUMMARY.md  IMPLEMENTATION_DONE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TOKEN_BUDGET.md  IMPROVEMENT_REPORT.md  MODULAR_PIPELINE_IMPLEMENTATION_SUMMARY.md  PHASE1_SUMMARY.md  PROJECT_STATUS.md  PROPERTYGRAPH_REFACTOR_README.md  QUICKSTART_EXAMPLES.md  README.md  REFACTORING_SUMMARY.md  RETRIEVAL_TOKEN_LIMIT_SUMMARY.md  SCHEMA_IMPLEMENTATION_SUMMARY.md  SETTINGS_REFACTORING_SUMMARY.md  _home_End_to_End_RAG_graph_index_DI_natural_text_csr_bridge.pkl  _home_End_to_End_RAG_graph_index_DI_natural_text_csr_bridge_fast_test.pkl  advanced_vector_package.py  config.yml  custom_domain_schema.json  data_processing.py  evaluation.py  extract_schema_only.py  graph_dynamic_schema_package.py  graph_unstructured_text_package.py  kg_config_schema.json  kg_prompts.yml  lightrag_package.py  model_settings.py  pyproject.toml  pytest.ini  requirements.txt  run_all_schema_tests.sh  (+4 more)
AutoschemaKG/: AutoschemaKG.py
AutoschemaKG/schema_learning/: schema_learning.jsonl
TBD/lightrag_reproduce/: step0_Extract_Unique_Contexts.py
docs/: API.md  ARCHITECTURE.md  COMMAND_REFERENCE.md  EXAMPLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_SUMMARY.md  LIGHTRAG_ENTITY_MERGE.md  METRICS.md  MODULAR_PIPELINE.md  RAGAS_INTEGRATION.md  RAGAS_TEST_REPORT.md  README.md  RUN_COMPREHENSIVE_TESTS_UPDATE.md  SCHEMA_RECORDING.md  SETTINGS_QUICK_REFERENCE.md  TESTING_GUIDE.md  TOKEN_BUDGET_GUIDE.md  UNIFIED_CLI_USAGE.md  dynamic_path_schema_overlap_analysis.md
graph_builder/: _DEPRECATED.md  __init__.py  baseline_builder.py  ontology_builder.py
graph_index/: docstore.json  index_store.json  property_graph_store.json
graph_index_DI_dynamic_schema/: docstore.json  index_store.json  property_graph_store.json
graph_index_DI_propertyindex/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
graph_index_fast_test/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
graph_index_natural_text/: docstore.json  index_store.json  property_graph_store.json
graph_retriever/: _DEPRECATED.md  __init__.py  anchor_builder.py  cache_utils.py  csr_graph_query_engine.py
graphrag/: settings.yaml
inputs/__enqueued__/: CSR_20260122_v4_92_clean_001.csv
legacy/: evaluation_old.py  graph_dynamic_schema_package.py  graph_package.py  graph_semi_structured.py  graph_semi_structured_auto_schema_2_stage.py  graph_semi_structured_auto_schema_iteration.py  graph_store_utils.py  graph_unstructured_text.py  lightrag_package.py  metrics.py  model_settings.py  ms_graphrag_package.py  test_autoschema_fix.py  verify_autoschema_fix.py
legacy/graph/: autoschema_lightrag.py
legacy/wrappers/: autoschema_wrapper.py  dynamic_schema_wrapper.py
lightrag_storage_old/: kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json
method/: AutoschemaKG.py  AutoschemaKG_template.py  kggen.py  kggen_template.py  lightrag_auto_schema.py  lightrag_ori.py  lightrag_template.py
method/TBD/: KARMA_template.py
method/schema/concept_csv/: concept_edges_schema_learning.jsonl_from_json_with_concept.csv  concept_nodes_schema_learning.jsonl_from_json_with_concept.csv  triple_edges_schema_learning.jsonl_from_json_with_concept.csv
method/schema/concepts/: concept_shard_0.csv
method/schema/kg_extraction/: qwen2.5:7b_schema_learning.jsonl_output_20260319071137_1_in_1.json
method/schema/kg_graphml/: schema_learning.jsonl_graph.graphml
rag_storage/: kv_store_doc_status.json  kv_store_full_docs.json  kv_store_text_chunks.json
scripts/: IMPLEMENTATION_REPORT.md  RAGAS_GEN_QA_scripts.sh  README_generate_qa.md  analyze_graphs.py  example_fair_comparison.sh  export_to_neo4j.py  generate_qa.py  manage_schema_cache.py  migrate_storage.py  recalculate_zh_metrics.py  run_all_experiments.sh  run_all_propertygraphindex.py  run_comprehensive_tests.py  run_evaluation.py  run_script.sh  run_script_GEN.sh  run_script_MD.sh  scan_large_files.sh  test_imports.py  test_improvements.py  test_token_budget.py  verify_refactoring.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/core/entity_extraction/: __init__.py  (+1 more)
src/data/: __init__.py  loaders.py  processors.py
src/evaluation/: __init__.py  citation_audit.py  eval_rag_quality.py  evaluator.py  reporters.py  reranker.py  token_analysis.py
src/formats/: __init__.py  entity.py  graph.py  relation.py  schema.py
src/graph_adapter/: __init__.py  base_adapter.py
src/graph_builder/: __init__.py  autoschema_builder.py  base_builder.py  baseline_builder.py  csqa_builder.py  dynamic_schema_builder.py  lightrag_builder.py  ontology_builder.py
src/graph_retriever/: __init__.py  adaptive_router.py  base_retriever.py  cache_utils.py  csqa_retriever.py  entity_linker.py  lightrag_graph_retriever.py  lightrag_retriever.py  tog_retriever.py
src/plugins/: __init__.py  autoschema_plugin.py  base.py  cq_driven_plugin.py  dynamic_path_plugin.py  graphiti_plugin.py  neo4j_builder_plugin.py  registry.py  similar_entity_merge_plugin.py
src/rag/: base.py  pipeline_factory.py  token_budget_controller.py
src/storage/: __init__.py  storage_manager.py
src/utils/: __init__.py  common.py  cypher_capable_store.py  token_counter.py
tests/: README.md  TEST_REPORT.md  __init__.py  run_tests.py  test_data_processors.py  test_metrics.py  test_modular_pipeline.py  test_ragas_integration.py
tests/integration/: test_end_to_end.py
tests/unit/: test_graph_adapter.py  test_lightrag_wrapper_native.py  test_modular_wrapper.py  test_schema_onto_learner.py  test_unified_builder.py  test_unified_retriever.py
(+542 files in other folders)
